add new setting

--- a/pokermahjong/templates/default/cas/cas.properties.erb
+++ b/pokermahjong/templates/default/cas/cas.properties.erb
@@ -6,3 +6,5 @@ cas.server.url_csnbo.aqzbo.com=https://csnbo.aqzbo.com/cas
 cas.server.url_<%= node[:pmahjong][:cas][:external_fqdn] %>=http://<%= node[:pmahjong][:cas][:external_fqdn] %>/userbo
 
 mappingSuffix=.jspx
+
+wallet.server.url=http://<%= node[:pmahjong][:wallet][:external_fqdn] %>/api
