--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -18,3 +18,9 @@ BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
+
+TEST_DOMAIN_A=web.staging.prom.spiralworks-cloud.com
+TEST_DOMAIN_B=web.aubo.staging.prom.spiralworks-cloud.com
+
+TEST_OPERATORID_A=1
+TEST_OPERATORID_B=2
