move settings for test OPs to web

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -16,3 +16,9 @@ CMS_API_VERSION=v1
 CMS_API_LBL=api
 CMS_OPT=operator
 OPERATOR_ID=1
+
+TEST_DOMAIN_A=web.staging.prom.spiralworks-cloud.com
+TEST_DOMAIN_B=web.aubo.staging.prom.spiralworks-cloud.com
+
+TEST_OPERATORID_A=1
+TEST_OPERATORID_B=2
