add BO_PAYMENT_FUND_TRANSFER to api.env

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -15,6 +15,7 @@ BO_PAYMENT_MEMBER=Member.svc?wsdl
 BO_PAYMENT_SYSTEM=MS1.svc?wsdl
 BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
+BO_PAYMENT_FUND_TRANSFER=FundTransfer.svc?singleWsdl
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
