--- a/spiral-win/templates/default/rollback.erb
+++ b/spiral-win/templates/default/rollback.erb
@@ -2,8 +2,11 @@
 $envkey = $args[0]
 $envsecret = $args[1]
 $sitename = $args[2]
-$sitedomain = $args[4]
 $siteport = $args[3]
+$sitedomain = $args[4]
+$bucket = $args[5]
+$folders = $args[6]
+
 $sitepath = "$env:systemdrive\inetpub\$sitename"
 $siteapppool = $sitename + "AppPool"
 
@@ -18,8 +21,8 @@ exit 1
 
 Write-Output "Updating Tracker"
 $file = "C:\\DeployTracker"
-if (Get-S3Object -BucketName sw-tmp -Key Tracker -AccessKey $envkey -SecretKey $envsecret) {
-Read-S3Object -BucketName sw-tmp -Key Tracker -AccessKey $envkey -SecretKey $envsecret -File $file
+if (Get-S3Object -BucketName $bucket -Key "$folders/Tracker" -AccessKey $envkey -SecretKey $envsecret) {
+Read-S3Object -BucketName $bucket -Key "$folders/Tracker" -AccessKey $envkey -SecretKey $envsecret -File $file
 } else {
 Write-Output "There was an issue fetching tracker file, check internet connection and try again. (Code: F1)"
 }
@@ -31,8 +34,8 @@ If (Test-Path "c:\$deployfile") {
 Write-Output "Deployment package already downloaded, skipping fetch."
 } else {
 Write-Output "Fetching Deployment Package"
-if (Get-S3Object -BucketName sw-tmp -Key $deployfile -AccessKey $envkey -SecretKey $envsecret) {
-Read-S3Object -BucketName sw-tmp -Key $deployfile -AccessKey $envkey -SecretKey $envsecret -File "c:\$deployfile"
+if (Get-S3Object -BucketName $bucket -Key "$folders/$deployfile" -AccessKey $envkey -SecretKey $envsecret) {
+Read-S3Object -BucketName $bucket -Key "$folders/$deployfile" -AccessKey $envkey -SecretKey $envsecret -File "c:\$deployfile"
 } else {
 Write-Output "There was an issue fetching package file, check internet connection. (code: F2)"
 }
@@ -97,7 +100,7 @@ Set-Content C:\DeployTracker $deployfile
 Write-Output "Updating Tracker with Rollback"
 $file = "C:\\DeployTracker"
 if (Test-Path $file) {
-Write-S3Object -BucketName sw-tmp -Key Tracker -AccessKey $envkey -SecretKey $envsecret -File $file
+Write-S3Object -BucketName $bucket -Key "$folders/$tracker" -AccessKey $envkey -SecretKey $envsecret -File $file
 }
 
 Write-Output "Rollback Successful!"
