--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -17,5 +17,7 @@ BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
 BO_PAYMENT_FUND_TRANSFER=FundTransfer.svc?singleWsdl
 
+CMS_ENDPOINT_BYGAMETYPE=/game_item/type
+
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
