add memcached settings and new CMS API endpoint setting

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -10,6 +10,10 @@ CMS_ENDPOINT_GAMEITEM=/game_item
 CMS_ENDPOINT_THEMES=/themes
 CMS_ENDPOINT_CONTACTS=/contacts
 CMS_ENDPOINT_PROMOCONTENT=/promo_content
+CMS_ENDPOINT_BYGAMETYPE=/game_item/type
+
+MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
+MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
 
 C_TOKEN_NAME=pt_token
 CMS_API_VERSION=v1
