--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -11,6 +11,8 @@ CMS_ENDPOINT_THEMES=/themes
 CMS_ENDPOINT_CONTACTS=/contacts
 CMS_ENDPOINT_PROMOCONTENT=/promo_content
 CMS_ENDPOINT_BYGAMETYPE=/game_item/type
+CMS_ENDPOINT_MEMBERS=/members
+
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
