use DNS instead of IP

--- a/zabbix/templates/default/zabbix_agentd.conf.erb
+++ b/zabbix/templates/default/zabbix_agentd.conf.erb
@@ -82,7 +82,7 @@ LogFileSize=0
 # Default:
 # Server=
 
-Server=52.74.204.170
+Server=zabbix.spiralworks-cloud.com
 
 ### Option: ListenPort
 #	Agent will listen on this port for connections from the server.
@@ -123,7 +123,7 @@ Server=52.74.204.170
 # Default:
 # ServerActive=
 
-ServerActive=52.74.204.170
+ServerActive=zabbix.spiralworks-cloud.com
 
 ### Option: Hostname
 #	Unique, case sensitive hostname.
