--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -22,7 +22,7 @@ CMS_OPT=operator
 OPERATOR_ID=1
 
 TEST_DOMAIN_A=web.staging.prom.spiralworks-cloud.com
-TEST_DOMAIN_B=web.aubo.staging.prom.spiralworks-cloud.com
+TEST_DOMAIN_B=aubo.web.staging.prom.spiralworks-cloud.com
 
 TEST_OPERATORID_A=1
 TEST_OPERATORID_B=2
