--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -21,8 +21,10 @@ CMS_API_LBL=api
 CMS_OPT=operator
 OPERATOR_ID=1
 
-TEST_DOMAIN_A=web.staging.prom.spiralworks-cloud.com
-TEST_DOMAIN_B=aubo.web.staging.prom.spiralworks-cloud.com
+TEST_DOMAIN_A=cms.staging.prom.spiralworks-cloud.com
+TEST_DOMAIN_B=aubo.cms.staging.prom.spiralworks-cloud.com
+TEST_DOMAIN_C=youyou.cms.staging.prom.spiralworks-cloud.com
 
 TEST_OPERATORID_A=1
 TEST_OPERATORID_B=2
+TEST_OPERATORID_C=5
