--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -8,6 +8,7 @@ C_TOKEN_NAME=pt_token
 
 BO_ENDPOINT=<%= node[:prometheus][:api][:bo_endpoint] %>/
 BO_MEMBER_WS=memberWS.asmx?WSDL
+BO_ANNOUNCEMENT=announcementWS.asmx?WSDL
 
 BO_PAYMENT_ENDPOINT=<%= node[:prometheus][:api][:bo_payment_endpoint] %>/
 BO_PAYMENT_MEMBER=Member.svc?wsdl
