--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -1,7 +1,9 @@
 server { 
         server_name <%= node[:prometheus][:cms][:fqdn] %> <%= node[:prometheus][:cms][:vhost] %>;
 	root /srv/http/cms/current;
- 
+        access_log /var/log/nginx/cms_access.log;
+        error_log /var/log/nginx/cms_error.log; 
+
         # Enable compression, this will help if you have for instance advagg‎ module
         # by serving Gzip versions of the files.
         gzip_static on;
