add BO_MESSAGING_ENDPOINT and BO_PRIVATE_MESSAGING_WS

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -9,6 +9,8 @@ C_TOKEN_NAME=pt_token
 BO_ENDPOINT=<%= node[:prometheus][:api][:bo_endpoint] %>/
 BO_MEMBER_WS=memberWS.asmx?WSDL
 BO_ANNOUNCEMENT=announcementWS.asmx?WSDL
+BO_MESSAGING_ENDPOINT=http://msgservices.aqzbouat.com/
+BO_PRIVATE_MESSAGING_WS=PMessage.svc?wsdl
 
 BO_PAYMENT_ENDPOINT=<%= node[:prometheus][:api][:bo_payment_endpoint] %>/
 BO_PAYMENT_MEMBER=Member.svc?wsdl
