obfuscate server name

--- a/prometheus/templates/default/api-nginx.conf.erb
+++ b/prometheus/templates/default/api-nginx.conf.erb
@@ -1,6 +1,9 @@
 server {
 	listen 80;
 
+        server_tokens   off;
+        more_set_headers 'Server: MagicBooBooLand';
+
 	root /srv/http/api/current/public;
 	index index.php index.html index.htm;
 
