--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -1,6 +1,9 @@
 server { 
         server_name <%= node[:prometheus][:cms][:fqdn] %> <%= node[:prometheus][:cms][:vhost] %>;
 	root /srv/http/cms/current;
+
+        server_tokens   off;
+        more_set_headers 'Server: MagicBooBooLand';
  
         # Enable compression, this will help if you have for instance advagg‎ module
         # by serving Gzip versions of the files.
