--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -15,6 +15,10 @@ CMS_ENDPOINT_DICTIONARY=/dictionary/section
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
 
+SLOTS_UAT_DOMAIN=w88uat.com
+SLOTS_UAT_OPERATOR=w88
+SLOTS_USE_UAT_DOMAIN=true
+
 C_TOKEN_NAME=pt_token
 CMS_API_VERSION=v1
 CMS_API_LBL=api
