--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -59,15 +59,15 @@ server {
                 #rewrite ^/(.*)$ /index.php?q=$1;
         }
 
-        location ~ \.php$ {
-                include /etc/nginx/cors.conf;
-                fastcgi_pass   127.0.0.1:9000;
-                # or if you used a unix socket
-                # fastcgi_pass   unix:/var/run/hhvm/sock;
-                fastcgi_index  index.php;
-                fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                include        fastcgi_params;
-        } 
+	location ~ \.php$ {
+	        include /etc/nginx/cors.conf;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $request_filename;
+		fastcgi_intercept_errors on;
+		fastcgi_pass unix:/var/run/php5-fpm.sock;
+		fastcgi_index index.php;
+	}
  
         # Fighting with Styles? This little gem is amazing.
         # This is for D6
