update .env file in accordance to John's input

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -2,6 +2,9 @@ MS_ENDPOINT=http://<%= node[:prometheus][:api][:fqdn] %>/api/v1
 MS_ENDPOINT_MEMBERINFO=/members/getinfo
 MS_ENDPOINT_MEMBERS=/members
 
+UAT_DOMAIN=w88uat.com
+IS_UAT_GAMES=true
+
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 CMS_ENDPOINT_BANNERS=/banners
 CMS_ENDPOINT_LOGO=/logo
@@ -14,10 +17,6 @@ CMS_ENDPOINT_DICTIONARY=/dictionary/section
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
-
-SLOTS_UAT_DOMAIN=w88uat.com
-SLOTS_UAT_OPERATOR=w88
-SLOTS_USE_UAT_DOMAIN=true
 
 C_TOKEN_NAME=pt_token
 CMS_API_VERSION=v1
