--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -14,6 +14,7 @@ CMS_ENDPOINT_CONTACTS=/contacts
 CMS_ENDPOINT_PROMOCONTENT=/promo_content
 CMS_ENDPOINT_BYGAMETYPE=/game_item/type
 CMS_ENDPOINT_DICTIONARY=/dictionary/section
+CMS_ENDPOINT_PROMOTIONS=/promo_content
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
