update API's env file with IPS related settings from Rowen

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -23,3 +23,8 @@ CMS_ENDPOINT_BYGAMETYPE=/game_item/type
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
+
+IPS_MERCHANT_KEY=<%= node[:prometheus][:ips_merchant_key] %>
+IPS_API_URL=https://pay.ips.com.cn/ipayment.aspx
+IPS_CALLBACK_URL=http://api.staging.prom.spiralworks-cloud.com/api/v1/deposit/ips/callback
+IPS_ERROR_CALLBACK_URL=http://api.staging.prom.spiralworks-cloud.com/api/v1/deposit/ips/error-callback
