--- a/phabricator/templates/default/nginx.erb
+++ b/phabricator/templates/default/nginx.erb
@@ -14,8 +14,8 @@ server {
     }
   }
   location /index.php {
-    fastcgi_pass   localhost:9000;
-    fastcgi_index   index.php;
+    fastcgi_pass   127.0.0.1:9000;
+    fastcgi_index  index.php;
 
     #required if PHP was built with --enable-force-cgi-redirect
     fastcgi_param  REDIRECT_STATUS    200;
