--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -1,11 +1,11 @@
+C_TOKEN_NAME=pt_token
+
 MS_ENDPOINT=http://<%= node[:prometheus][:api][:fqdn] %>/api/v1
 MS_ENDPOINT_MEMBERINFO=/members/getinfo
 MS_ENDPOINT_MEMBERS=/members
 
-UAT_DOMAIN=w88uat.com
-IS_UAT_GAMES=true
-
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
+CMS_ENDPOINT_OPERATORS=/operators
 CMS_ENDPOINT_BANNERS=/banners
 CMS_ENDPOINT_LOGO=/logo
 CMS_ENDPOINT_GAMEITEM=/game_item
@@ -19,16 +19,13 @@ CMS_ENDPOINT_PROMOTIONS=/promo_content
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
 
-C_TOKEN_NAME=pt_token
 CMS_API_VERSION=v1
 CMS_API_LBL=api
 CMS_OPT=operator
-OPERATOR_ID=1
 
-TEST_DOMAIN_A=web.staging.prom.spiralworks-cloud.com
-TEST_DOMAIN_B=aubo.web.staging.prom.spiralworks-cloud.com
-TEST_DOMAIN_C=youyou.web.staging.prom.spiralworks-cloud.com
 
-TEST_OPERATORID_A=1
-TEST_OPERATORID_B=2
-TEST_OPERATORID_C=5
+GELF_HOST=graylog.spiralworks-cloud.com
+GELF_PORT=12197
+STATSD_ENDPOINT=grayphite.spiralworks-cloud.com
+STATSD_PORT=8125
+STATSD_NAMESPACE=prometheus-staging
