--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -5,7 +5,7 @@ MS_ENDPOINT_MEMBERS=/members
 UAT_DOMAIN=w88uat.com
 IS_UAT_GAMES=true
 
-CMS_ENDPOINT=http://<%= node[:prometheus][:api][:fqdn] %>/
+CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 CMS_ENDPOINT_BANNERS=/banners
 CMS_ENDPOINT_LOGO=/logo
 CMS_ENDPOINT_GAMEITEM=/game_item
