use colons for separators as per Francis' feedback

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -33,4 +33,4 @@ GELF_HOST=graylog.spiralworks-cloud.com
 GELF_PORT=12197
 STATSD_ENDPOINT=grayphite.spiralworks-cloud.com
 STATSD_PORT=8125
-STATSD_NAMESPACE=prometheus-staging
+STATSD_NAMESPACE=prometheus:staging
