--- a/prometheus/templates/default/api-nginx.conf.erb
+++ b/prometheus/templates/default/api-nginx.conf.erb
@@ -1,14 +1,19 @@
 server {
 	listen 80;
 
-        server_tokens   off;
-        more_set_headers 'Server: MagicBooBooLand';
+	server_tokens   off;
+	more_set_headers 'Server: MagicBooBooLand';
 
 	root /srv/http/api/current/public;
 	index index.php index.html index.htm;
 
 	access_log /var/log/nginx/api_access.log;
-        error_log /var/log/nginx/api_error.log;
+       
+	<% if node['spiral']['graylog']['enable'] == true %>
+	error_log syslog:server=node['spiral']['graylog']['host']:['spiral']['graylog']['syslog_udp']['port'],facility=daemon;
+	<%- else %>
+	error_log /var/log/nginx/api_error.log;
+	<%- end %>
 
 	server_name <%= node[:prometheus][:api][:fqdn] %>; 
 
