--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -9,7 +9,7 @@ server {
  	access_log /var/log/nginx/web_access.log;
 
 	<% if node['spiral']['graylog']['enable'] == true %>
-	error_log syslog:server=node['spiral']['graylog']['host']:['spiral']['graylog']['syslog_udp']['port'],facility=daemon;
+	error_log syslog:server=<%= node['spiral']['graylog']['host'] %>:<%= node['spiral']['graylog']['syslog_udp']['port'] %>,facility=daemon;
 	<%- else %>
 	error_log /var/log/nginx/web_error.log;
 	<%- end %>
