--- a/spiral/templates/default/rsyslog-graylog.conf.erb
+++ b/spiral/templates/default/rsyslog-graylog.conf.erb
@@ -1,1 +1,1 @@
-*.*     @<%= node['spiral']['graylog']['host'] %>:<%= ['spiral']['graylog']['syslog_udp']['port'] %>
+*.*     @<%= node['spiral']['graylog']['host'] %>:<%= node['spiral']['graylog']['syslog_udp']['port'] %>
