how the hell did root go missing?

--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -3,6 +3,8 @@ server {
 
 	server_tokens   off;
 	more_set_headers 'Server: MagicBooBooLand';
+
+	root /srv/http/cms/current/public;
  
 	access_log /var/log/nginx/cms_access.log;
 
