reverse order, cms needs the change not frontend (accidental)

--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -4,7 +4,7 @@ server {
 	server_tokens   off;
 	more_set_headers 'Server: MagicBooBooLand';
 
-	root /srv/http/cms/current/public;
+	root /srv/http/cms/current;
  
 	access_log /var/log/nginx/cms_access.log;
 
