--- a/prometheus/templates/default/cms_settings.php.erb
+++ b/prometheus/templates/default/cms_settings.php.erb
@@ -59,22 +59,12 @@ $conf['memcache_servers'] = array(
 );
 
 $conf['memcache_bins'] = array(
- 'cache'             => 'default',
- 'cache_admin_menu'  => 'default',
- 'cache_block'       => 'default',
- 'cache_bootstrap'   => 'default',
- 'cache_field'       => 'default',
- 'cache_filter'      => 'default',
- 'cache_image'       => 'default',
- 'cache_libraries'   => 'default',
- 'cache_menu'        => 'default',
- 'cache_page'        => 'default',
- 'cache_path'        => 'default',
- 'cache_performance' => 'default',
- 'cache_rules'       => 'default',
- 'cache_token'       => 'default',
- 'cache_views'       => 'default',
- 'cache_views_data'  => 'default'
+ 'cache' => 'default',
+ 'cache_bootstrap' => 'default',
+ 'cache_field' => 'default',
+ 'cache_filter' => 'default',
+ 'cache_menu' => 'default',
+ 'cache_page' => 'default'
 );
 
 # Move storage for lock system into memcached.
