--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -90,4 +90,9 @@ server {
 		expires max;
 		log_not_found off;
 	}
+
+	location = /lbtest.txt {
+		try_files $uri @rewrite;
+		access_log off;
+	}
 }
