--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -95,4 +95,12 @@ server {
 		try_files $uri @rewrite;
 		access_log off;
 	}
+
+	location /dE8hoCJoyutI0roNOnsaE3UmsKdA9Cet {
+		stub_status on;
+		access_log off;
+		allow 52.74.204.170/32;
+		allow 127.0.0.1/32;
+		deny all;
+	}
 }
