--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -53,4 +53,12 @@ server {
 	location ~ /\.ht {
 		deny all;
 	}
+
+	location /dE8hoCJoyutI0roNOnsaE3UmsKdA9Cet {
+		stub_status on;
+		access_log off;
+		allow 52.74.204.170/32;
+		allow 127.0.0.1/32;
+		deny all;
+	}
 }
