--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -18,6 +18,8 @@ BO_PAYMENT_SYSTEM=MS1.svc?wsdl
 BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
 BO_PAYMENT_FUND_TRANSFER=FundTransfer.svc?singleWsdl
+BO_MAIN_AFFILIATE_ENDPOINT=http://affiliateservices.aqzbouat.com/
+BO_AFFILIATE=affiliateWS.asmx?wsdl
 
 CMS_ENDPOINT_BYGAMETYPE=/game_item/type
 
