--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -19,6 +19,7 @@ BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
 BO_PAYMENT_FUND_TRANSFER=FundTransfer.svc?singleWsdl
 
+CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 CMS_ENDPOINT_BYGAMETYPE=/game_item/type
 
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
