update MS_ENDPOINT to reflect actual passthrough URI

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -1,4 +1,4 @@
-MS_ENDPOINT=http://<%= node[:prometheus][:web][:fqdn] %>/api-int/v1
+MS_ENDPOINT=http://<%= node[:prometheus][:web][:fqdn] %>/api/v1
 MS_ENDPOINT_MEMBERINFO=/members/getinfo
 MS_ENDPOINT_MEMBERS=/members
 
