--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -3,6 +3,7 @@ MS_ENDPOINT_MEMBERINFO=/members/getinfo
 MS_ENDPOINT_MEMBERS=/members
 
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
+CMS_ENDPOINT_INT=http://<%= node[:prometheus][:cms][:int_fqdn] %>/
 CMS_ENDPOINT_BANNERS=/banners
 CMS_ENDPOINT_LOGO=/logo
 CMS_ENDPOINT_OPERATORS=/operators
