--- a/prometheus/templates/default/api-nginx.conf.erb
+++ b/prometheus/templates/default/api-nginx.conf.erb
@@ -22,6 +22,7 @@ server {
 	}
 
 	location ~ \.php$ {
+		include /etc/nginx/cors.conf;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $request_filename;
