--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -52,6 +52,7 @@ server {
 	}
  
 	location / {
+		include /etc/nginx/cors.conf;
 		# This is cool because no php is touched for static content
 		try_files $uri @rewrite;
 	}
@@ -68,6 +69,7 @@ server {
 	}
 
 	location ~ \.php$ {
+		include /etc/nginx/cors.conf;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $request_filename;
