fuck god damn shit
damn

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -17,7 +17,7 @@ BO_PAYMENT_SYSTEM=MS1.svc?wsdl
 BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
 BO_PAYMENT_FUND_TRANSFER=FundTransfer.svc?singleWsdl
-BO_MAIN_AFFILIATE_ENDPOINT=http://affiliateservices.aqzbouat.com/
+BO_MAIN_AFFILIATE_ENDPOINT=<%= node[:prometheus][:api][:bo_affiliate_endpoint] %>
 BO_AFFILIATE=affiliateWS.asmx?wsdl
 
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
