ok now everything should be ok

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -6,18 +6,19 @@ C_TOKEN_EXPIRY=240
 C_TOKEN_NAME=pt_token
 
 BO_ENDPOINT=<%= node[:prometheus][:api][:bo_endpoint] %>/
+BO_MESSAGING_ENDPOINT=<%= node[:prometheus][:api][:bo_msgservice_endpoint] %>/
+BO_PAYMENT_ENDPOINT=<%= node[:prometheus][:api][:bo_payment_endpoint] %>/
+BO_MAIN_AFFILIATE_ENDPOINT=<%= node[:prometheus][:api][:bo_affiliate_endpoint] %>/
+
+BO_PRIVATE_MESSAGING_WS=PMessage.svc?wsdl
 BO_MEMBER_WS=memberWS.asmx?WSDL
 BO_ANNOUNCEMENT=announcementWS.asmx?WSDL
-BO_MESSAGING_ENDPOINT=http://msgservices.aqzbouat.com/
-BO_PRIVATE_MESSAGING_WS=PMessage.svc?wsdl
-
-BO_PAYMENT_ENDPOINT=<%= node[:prometheus][:api][:bo_payment_endpoint] %>/
 BO_PAYMENT_MEMBER=Member.svc?wsdl
 BO_PAYMENT_SYSTEM=MS1.svc?wsdl
 BO_PAYMENT_DEPOSIT=Deposit.svc?wsdl
 BO_PAYMENT_WITHDRAWAL=Withdrawal.svc?wsdl
 BO_PAYMENT_FUND_TRANSFER=FundTransfer.svc?singleWsdl
-BO_MAIN_AFFILIATE_ENDPOINT=<%= node[:prometheus][:api][:bo_affiliate_endpoint] %>
+
 BO_AFFILIATE=affiliateWS.asmx?wsdl
 
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
